--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
+cffi==1.14.4
 click==7.1.2
 Flask==1.1.2
+Flask-Sockets==0.2.1
 gevent==20.6.2
+gevent-websocket==0.10.1
 greenlet==0.4.16
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+pycparser==2.20
 Werkzeug==1.0.1
 zope.event==4.4
 zope.interface==5.1.0
